--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Is your birthday lucky</title>
 </head>
 <body>
-    <h1 id="heading"> Is your birthday lucky ?🎂🤔 </h1>
+    <h1 id="heading"> IS YOUR BIRTHDAY LUCKY? </h1>
     <hr>
     <br>
 
@@ -19,7 +19,7 @@
      <input type="text" id="lucky-number">
      <br>
      <br>
-    <button id = "check-btn">Check Date</button>
+    <button id = "check-btn">Check Here</button>
     <p id="msg-box"></p>
 
     </body>
